# Resume-Builder

./: .gitignore  Cargo.toml  README.md
.env/: pyvenv.cfg
res/: cv.json  job_desc.txt
src/: docx.rs  lib.rs  markdown.rs  pdf.rs  resume.rs  word_cloud.rs
